# src/app/api/api/api.ts
@@ -10,6 +10,8 @@ export * from './ownerCompany.service';
 import { OwnerCompanyService } from './ownerCompany.service';
 export * from './ownerCompanyEmployee.service';
 import { OwnerCompanyEmployeeService } from './ownerCompanyEmployee.service';
+export * from './role.service';
+import { RoleService } from './role.service';
 export * from './sparePart.service';
 import { SparePartService } from './sparePart.service';
 export * from './tool.service';
@@ -20,4 +22,4 @@ export * from './worksheet.service';
 import { WorksheetService } from './worksheet.service';
 export * from './worksheetNote.service';
 import { WorksheetNoteService } from './worksheetNote.service';
-export const APIS = [AuthService, CompanyService, DefectService, HealthService, OwnerCompanyService, OwnerCompanyEmployeeService, SparePartService, ToolService, UserService, WorksheetService, WorksheetNoteService];
+export const APIS = [AuthService, CompanyService, DefectService, HealthService, OwnerCompanyService, OwnerCompanyEmployeeService, RoleService, SparePartService, ToolService, UserService, WorksheetService, WorksheetNoteService];
